logs/Slang/chapter-7/unions/tagged/packed.sv.log
name: basic-tagged-packed-union
description: Test tagged packed union support
should_fail: 0
tags: 7.3.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/unions/tagged/packed.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/unions/tagged/packed.sv:9:1: error: language feature not yet supported
union tagged packed {
^~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/unions/tagged/packed.sv:15:10: error: language feature not yet supported
    un = tagged v2 (10);
         ^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/unions/tagged/packed.sv:15:19: error: expected ';'
    un = tagged v2 (10);
                  ^
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/unions/tagged/packed.sv:15:20: error: expected statement
    un = tagged v2 (10);
                   ^
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/unions/tagged/packed.sv:16:7: error: language feature not yet supported
	un = tagged v1 (85); // 101_0101
	     ^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/unions/tagged/packed.sv:16:16: error: expected ';'
	un = tagged v1 (85); // 101_0101
	              ^
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/unions/tagged/packed.sv:16:17: error: expected statement
	un = tagged v1 (85); // 101_0101
	               ^
